--- a/styles/styles.css
+++ b/styles/styles.css
@@ -305,7 +305,6 @@ img {
   background-color: #000000;
   transform: rotate(90deg);
   transition: transform 0.2s ease-in;
-  transition: opacity 0.2s ease-in;
 }
 
 .navigation-list-wrapper {
@@ -447,13 +446,13 @@ img {
 }
 
 .slider-features-item {
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: column;
-  margin: 0 20px 20px 0;
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 20px;
+  margin: 0 20px 0 0;
 }
 
-.slider-features-item:nth-child(3n){
+.slider-features-item:nth-child(3n) {
   margin-right: 0;
 }
 
@@ -461,12 +460,12 @@ img {
   margin: 0;
   font-size: 36px;
   color: #000000;
-  margin-bottom: 12px;
 }
 
 .slider-features-name {
   margin: 0;
   font-size: 16px;
+  grid-row-start: 2;
 }
 
 .slider input[type="radio"] {
@@ -1023,7 +1022,6 @@ img {
   border-radius: 50%;
   background-color: rgba(255, 255, 255, 0.3);
   position: relative;
-
 }
 
 .social-button::before {
@@ -1035,7 +1033,6 @@ img {
   background-repeat: no-repeat;
   background-position: 50% 50%;
 }
-
 
 .social-button-tg::before {
   width: 14px;
@@ -1054,8 +1051,6 @@ img {
   height: 14px;
   background-image: url(..//images/svg/social-twitter.svg);
 }
-
-
 
 .page-footer-logo {
   text-decoration: none;
@@ -1382,10 +1377,12 @@ img {
   gap: 44px 40px;
 }
 
+.card-product-item {
+  position: relative;
+}
 .card-product-link {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
   text-decoration: none;
   color: #000000;
   font-weight: 700;
@@ -1399,16 +1396,52 @@ img {
   margin-bottom: 32px;
 }
 
+.product-text-wrapper {
+  display: grid;
+  grid-template-columns: 230px 1fr;
+  gap: 20px;
+  width: 100%;
+}
+
 .product-title {
   max-width: 230px;
   font: inherit;
   margin: 0;
+  margin-right: auto;
 }
 
 .product-price {
   font-weight: 400;
   line-height: 21px;
   letter-spacing: 0;
+  margin-left: auto;
+}
+
+.product-about {
+  display: none;
+  position: absolute;
+  width: 220px;
+  top: 170px;
+  left: 70px;
+}
+
+.new-product::after {
+  position: absolute;
+  content: "new";
+  width: 60px;
+  height: 60px;
+  top: 27px;
+  right: 27px;
+  border: 2px solid rgba(0, 0, 0, 0.6);
+  border-radius: 50%;
+  font-family: "Raleway", Arial, sans-serif;
+  font-weight: 800;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.2em;
+  text-transform: uppercase;
+  padding: 21px 12px 23px 8px;
+  color: rgba(0, 0, 0, 0.6);
 }
 
 .product-button {
